[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/movement.gd" type="Script" id=1]
[ext_resource path="res://scenes/Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player_input.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 2, 1 )

[node name="player" type="KinematicBody"]

[node name="Player_input" parent="." instance=ExtResource( 3 )]

[node name="Movement" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9957, 0 )
shape = SubResource( 1 )
script = ExtResource( 1 )
MAX_SPEED = 5

[node name="Model" parent="." instance=ExtResource( 2 )]

[connection signal="look_towards" from="Player_input" to="Model" method="_on_Player_input_look_towards"]
[connection signal="move_towards" from="Player_input" to="Movement" method="_on_Player_input_move_towards"]
[connection signal="updated_velocity" from="Movement" to="Model" method="_on_Movement_updated_velocity"]
[connection signal="updated_root_motion_direction" from="Model" to="Movement" method="_on_Model_updated_root_motion_direction"]
